--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.ModernPlayground" parent="android:Theme.Material.Light.NoActionBar" />
-
-    <!-- <style name="AppTheme" parent="android:Theme.Material.Light.NoActionBar" /> -->
+    <style name="Theme.MySoothe" parent="Theme.MaterialComponents.DayNight">
+        <item name="android:statusBarColor">@color/status_bar_color</item>
+        <item name="android:windowLightStatusBar">?attr/isLightTheme</item>
+    </style>
 </resources>
