animation codelab start

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <style name="Theme.ModernPlayground" parent="android:Theme.Material.Light.NoActionBar" />
-
+    <style name="Theme.Animation" parent="android:Theme.Material.NoActionBar" />
     <!-- <style name="AppTheme" parent="android:Theme.Material.Light.NoActionBar" /> -->
 </resources>
