--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.ModernPlayground" parent="android:Theme.Material.Light.NoActionBar" />
-
+    <!-- <style name="Theme.ModernPlayground" parent="android:Theme.Material.Light.NoActionBar" /> -->
+    <style name="Theme.Animation" parent="android:Theme.Material.NoActionBar" />
     <!-- <style name="AppTheme" parent="android:Theme.Material.Light.NoActionBar" /> -->
 </resources>
