--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,25 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. --><style name="AppTheme" parent="Base.AppTheme" />
-
-    <style name="AppTheme.OverlapSystemBar" parent="Base.AppTheme" />
-
-    <style name="Base.AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <!-- For Android sdk versions 26+. -->
-        <item name="android:fontFamily" tools:targetApi="jelly_bean">@font/opensans_font</item>
-        <!-- Target Android sdk versions < 26 and > 14. -->
-        <item name="fontFamily">@font/opensans_font</item>
-        <!-- sets the style for the overflow button -->
-        <item name="actionOverflowButtonStyle">@style/actionOverflowButtonStyle</item>
+    <!-- Base application theme. -->
+    <style name="Theme.Rally" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="android:statusBarColor">@color/statusBarColor</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="android:windowBackground">?attr/colorSurface</item>
     </style>
 
-    <!-- This style defines the tint color of the overflow menu button -->
-    <style name="actionOverflowButtonStyle" parent="@style/Widget.AppCompat.ActionButton.Overflow">
-        <item name="android:tint">@color/colorAccent</item>
-    </style>
-
-    <style name="Toolbar" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
